--- a/Dispatching System/src/index.css
+++ b/Dispatching System/src/index.css
@@ -50,3 +50,14 @@
 .leaflet-routing-container {
   display: none !important;
 }
+
+.custom-tooltip-glass {
+  background: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+  padding: 0 !important;
+}
+
+.custom-tooltip-glass::before {
+  display: none !important;
+}
